--- a/.github/workflows/waka-workflow.yml
+++ b/.github/workflows/waka-workflow.yml
@@ -1,15 +1,16 @@
-- name: Profile Readme Development Stats
-  uses: anmol098/waka-readme-stats@V1.1
-  with:
-    GH_TOKEN: ${{ secrets.GH_TOKEN }} # default is ${{ github.token }}
-    WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-    SHOW_OS: "True" 
-    SHOW_PROJECTS: "False"
-    SHOW_EDITORS: "True" 
-    SHOW_TIMEZONE: "True" 
-    SHOW_COMMIT: "True" 
-    SHOW_LANGUAGE: "True" 
-    SHOW_LINES_OF_CODE: "True" 
-    SHOW_LANGUAGE_PER_REPO: "True" 
-    SHOW_LOC_CHART: "True" 
-    SHOW_DAYS_OF_WEEK: "True" 
+name: Waka Readme
+
+on:
+  schedule:
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
+
+jobs:
+  update-readme:
+    name: Update Readme with Metrics
+    runs-on: ubuntu-latest
+    steps:
+      - uses: anmol098/waka-readme-stats@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
