--- a/.github/workflows/waka-workflow.yml
+++ b/.github/workflows/waka-workflow.yml
@@ -15,3 +15,13 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_OS: "True" 
+          SHOW_PROJECTS: "False"
+          SHOW_EDITORS: "True" 
+          SHOW_TIMEZONE: "True" 
+          SHOW_COMMIT: "True" 
+          SHOW_LANGUAGE: "True" 
+          SHOW_LINES_OF_CODE: "True" 
+          SHOW_LANGUAGE_PER_REPO: "True" 
+          SHOW_LOC_CHART: "True" 
+          SHOW_DAYS_OF_WEEK: "True" 
