--- a/.github/workflows/waka-workflow.yml
+++ b/.github/workflows/waka-workflow.yml
@@ -25,3 +25,10 @@ jobs:
           SHOW_LANGUAGE_PER_REPO: "True" 
           SHOW_LOC_CHART: "True" 
           SHOW_DAYS_OF_WEEK: "True" 
+        
+      - name: Update Readme with Metrics
+        uses: athul/waka-readme@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN}}
+          USERNAME: grigala
