--- a/.github/workflows/waka-workflow.yml
+++ b/.github/workflows/waka-workflow.yml
@@ -2,8 +2,8 @@ name: Waka Readme
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    # Runs at 9AM GMT+1
+    - cron: '0 9 * * *'
   workflow_dispatch:
 
 jobs:
@@ -14,6 +14,7 @@ jobs:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }} 
           SHOW_OS: "True" 
           SHOW_PROJECTS: "False"
           SHOW_EDITORS: "True" 
@@ -29,4 +30,5 @@ jobs:
         uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           USERNAME: grigala
