--- a/.github/workflows/waka-workflow.yml
+++ b/.github/workflows/waka-workflow.yml
@@ -26,9 +26,9 @@ jobs:
           SHOW_LOC_CHART: "True" 
           SHOW_DAYS_OF_WEEK: "True" 
         
-      - name: Update Readme with Metrics
-        uses: athul/waka-readme@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          USERNAME: grigala
+      # - name: Update Readme with Metrics
+      #   uses: athul/waka-readme@master
+      #   with:
+      #     WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+      #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      #     USERNAME: grigala
