--- a/.github/workflows/waka-workflow.yml
+++ b/.github/workflows/waka-workflow.yml
@@ -10,25 +10,24 @@ jobs:
   update-readme:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
-    steps:
-      - uses: anmol098/waka-readme-stats@master
+      steps:
+        uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }} 
-          SHOW_OS: "True" 
-          SHOW_PROJECTS: "False"
-          SHOW_EDITORS: "True" 
-          SHOW_TIMEZONE: "True" 
-          SHOW_COMMIT: "True" 
-          SHOW_LANGUAGE: "True" 
-          SHOW_LINES_OF_CODE: "True" 
-          SHOW_LANGUAGE_PER_REPO: "True" 
-          SHOW_LOC_CHART: "True" 
-          SHOW_DAYS_OF_WEEK: "True" 
+#     steps:
+#       - uses: anmol098/waka-readme-stats@master
+#         with:
+#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+#           GH_TOKEN: ${{ secrets.GH_TOKEN }} 
+#           SHOW_OS: "True" 
+#           SHOW_PROJECTS: "False"
+#           SHOW_EDITORS: "True" 
+#           SHOW_TIMEZONE: "True" 
+#           SHOW_COMMIT: "True" 
+#           SHOW_LANGUAGE: "True" 
+#           SHOW_LINES_OF_CODE: "True" 
+#           SHOW_LANGUAGE_PER_REPO: "True" 
+#           SHOW_LOC_CHART: "True" 
+#           SHOW_DAYS_OF_WEEK: "True" 
         
-      # - name: Update Readme with Metrics
-      #   uses: athul/waka-readme@master
-      #   with:
-      #     WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-      #     GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      #     USERNAME: grigala
+
