--- a/.github/workflows/waka-workflow.yml
+++ b/.github/workflows/waka-workflow.yml
@@ -1,4 +1,4 @@
-name: Waka Readme
+name: Waka Weekly Language Usage
 
 on:
   workflow_dispatch:
@@ -8,34 +8,12 @@ on:
 
 jobs:
   update-readme:
-    name: Update waka metrics
+    name: Update WAKA weekly language usage
     runs-on: ubuntu-latest
     steps:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
-          
-      - uses: anmol098/waka-readme-stats@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_PROJECTS: false
-          SHOW_LINES_OF_CODE: true
-        
-
-#       - uses: anmol098/waka-readme-stats@master
-#         with:
-#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-#           GH_TOKEN: ${{ secrets.GH_TOKEN }} 
-#           SHOW_OS: "True" 
-#           SHOW_PROJECTS: "False"
-#           SHOW_EDITORS: "True" 
-#           SHOW_TIMEZONE: "True" 
-#           SHOW_COMMIT: "True" 
-#           SHOW_LANGUAGE: "True" 
-#           SHOW_LINES_OF_CODE: "True" 
-#           SHOW_LANGUAGE_PER_REPO: "True" 
-#           SHOW_LOC_CHART: "True" 
-#           SHOW_DAYS_OF_WEEK: "True" 
         
 
