--- a/.github/workflows/waka-readme-detailed.yml
+++ b/.github/workflows/waka-readme-detailed.yml
@@ -1,35 +1,17 @@
 name: Waka Detailed Statistics
-
 on:
-  workflow_dispatch:
   schedule:
-    # Runs at 12am UTC
     - cron: '0 9 * * *'
 
 jobs:
   update-readme:
-    name: Update WAKA detailed statistics
+    name: Update Readme Detailed Statistics
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_PROJECTS: false
-          SHOW_LINES_OF_CODE: true
-        
-#       - uses: anmol098/waka-readme-stats@master
-#         with:
-#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-#           GH_TOKEN: ${{ secrets.GH_TOKEN }} 
-#           SHOW_OS: "True" 
-#           SHOW_PROJECTS: "False"
-#           SHOW_EDITORS: "True" 
-#           SHOW_TIMEZONE: "True" 
-#           SHOW_COMMIT: "True" 
-#           SHOW_LANGUAGE: "True" 
-#           SHOW_LINES_OF_CODE: "True" 
-#           SHOW_LANGUAGE_PER_REPO: "True" 
-#           SHOW_LOC_CHART: "True" 
-#           SHOW_DAYS_OF_WEEK: "True" 
+          SHOW_OS: "False"
+          SHOW_PROJECTS: "False"
         
