--- a/.github/workflows/waka-readme-detailed.yml
+++ b/.github/workflows/waka-readme-detailed.yml
@@ -15,4 +15,5 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_OS: "False"
           SHOW_PROJECTS: "False"
+          SHOW_LOC_CHART: "False"
         
