--- a/.github/workflows/waka-readme-detailed.yml
+++ b/.github/workflows/waka-readme-detailed.yml
@@ -13,7 +13,16 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_OS: "False"
+          SHOW_OS: "True"
           SHOW_PROJECTS: "False"
           SHOW_LOC_CHART: "False"
+          SHOW_EDITORS: "True" 
+          SHOW_TIMEZONE: "True" 
+          SHOW_COMMIT: "False" 
+          SHOW_LANGUAGE: "True" 
+          SHOW_LINES_OF_CODE: "True" 
+          SHOW_LANGUAGE_PER_REPO: "True" 
+          SHOW_DAYS_OF_WEEK: "False" 
+          SHOW_PROFILE_VIEWS: "False"
+          SHOW_SHORT_INFO: "False"
         
