--- a/.github/workflows/waka-readme-detailed.yml
+++ b/.github/workflows/waka-readme-detailed.yml
@@ -20,7 +20,7 @@ jobs:
           SHOW_TIMEZONE: "True" 
           SHOW_COMMIT: "False" 
           SHOW_LANGUAGE: "True" 
-          SHOW_LINES_OF_CODE: "True" 
+          SHOW_LINES_OF_CODE: "False" 
           SHOW_LANGUAGE_PER_REPO: "True" 
           SHOW_DAYS_OF_WEEK: "False" 
           SHOW_PROFILE_VIEWS: "False"
